<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SettingDialog</string>
<string name="cam_strings_application_name_txt" xliff:restype="x-GENERIC/LIST/TITLE/ICON">Camera</string>
<string name="cam_strings_shortcut_video_camera_txt" xliff:restype="x-GENERIC/LIST/TITLE/ICON">Video camera</string>
<string name="cam_strings_scenes_auto_recog_landscape_txt" xliff:restype="x-CAMERA/VIEWFINDER/SCENE">Landscape</string>
<string name="cam_strings_scenes_auto_recog_backlight_txt" xliff:restype="x-CAMERA/VIEWFINDER/SCENE">Backlight</string>
<string name="cam_strings_scenes_auto_recog_twilight_txt" xliff:restype="x-CAMERA/VIEWFINDER/SCENE">Night scene</string>
<string name="cam_strings_scenes_auto_recog_text_txt" xliff:restype="x-CAMERA/VIEWFINDER/SCENE">Document</string>
<string name="cam_strings_settings_on_txt" xliff:restype="x-CAMERA/CORE/LIST/2ND/1ROW/1ICON">On</string>
<string name="cam_strings_settings_off_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Off</string>
<string name="cam_strings_settings_auto_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Auto</string>
<string name="cam_strings_scenes_txt" xliff:restype="x-CAMERA/MENU/DIALOG/2ROWS">Scenes</string>
<string name="cam_strings_scenes_landscape_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Landscape</string>
<string name="cam_strings_scenes_nightmode_txt" xliff:restype="x-CAMERA/SETTING/LIST/2ROWS/H">Night</string>
<string name="cam_strings_scenes_nightscene_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Night scene</string>
<string name="cam_strings_scenes_party_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Party</string>
<string name="cam_strings_scenes_sports_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Sports</string>
<string name="cam_strings_scenes_beachsnow_txt" xliff:restype="x-CAMERA/SETTING/LIST/2ROWS/H">Beach and snow</string>
<string name="cam_strings_scenes_document_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/ITEM/LONG/1ROW/1ICON">Document</string>
<string name="cam_strings_resolution_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/ITEM/SHORT/1ROW/1ICON">Resolution</string>
<string name="cam_strings_flash_txt" xliff:restype="x-CAMERA/MENU/DIALOG/2ROWS">Flash</string>
<string name="cam_strings_flash_fill_flash_txt" xliff:restype="x-CAMERA/CORE/LIST/2ND/1ROW/1ICON">Fill flash</string>
<string name="cam_strings_flash_red_eye_reduc_txt" xliff:restype="x-CAMERA/CORE/LIST/2ND/1ROW/1ICON">Red-eye reduction</string>
<string name="cam_strings_self_timer_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/ITEM/SHORT/1ROW/1ICON">Self-timer</string>
<string name="cam_strings_self_timer_2_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">2 sec.</string>
<string name="cam_strings_self_timer_10_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">10 sec.</string>
<string name="cam_strings_smile_capture_txt" xliff:restype="x-CAMERA/MENU/DIALOG/2ROWS">Smile detection</string>
<string name="cam_strings_smile_capture_big_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Big smile</string>
<string name="cam_strings_smile_capture_normal_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Average smile</string>
<string name="cam_strings_smile_capture_faint_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Small smile</string>
<string name="cam_strings_focus_mode_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/ITEM/SHORT/1ROW/NOICON">Focus mode</string>
<string name="cam_strings_focus_mode_single_af_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Single autofocus</string>
<string name="cam_strings_focus_mode_multi_af_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Multi autofocus</string>
<string name="cam_strings_focus_mode_infinity_txt" xliff:restype="x-CAMERA/SETTING/LIST/2ROWS/H">Infinity</string>
<string name="cam_strings_focus_mode_face_detection_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Face detection</string>
<string name="cam_strings_focus_mode_touch_focus_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Touch focus</string>
<string name="cam_strings_focus_mode_macro_txt" xliff:restype="x-CAMERA/SETTING/LIST/2ROWS/H">Macro</string>
<string name="cam_strings_exposure_level_txt" xliff:restype="x-CAMERA/MENU/DIALOG/2ROWS">Exposure value</string>
<string name="cam_strings_exposure_level_m20_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/CURRENT">EV -2.0</string>
<string name="cam_strings_exposure_level_m17_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/CURRENT">EV -1.7</string>
<string name="cam_strings_exposure_level_m13_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/CURRENT">EV -1.3</string>
<string name="cam_strings_exposure_level_m10_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/CURRENT">EV -1.0</string>
<string name="cam_strings_exposure_level_m07_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/CURRENT">EV -0.7</string>
<string name="cam_strings_exposure_level_m03_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/CURRENT">EV -0.3</string>
<string name="cam_strings_exposure_level_pm0_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/CURRENT">EV \u00B10.0</string>
<string name="cam_strings_exposure_level_p03_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/CURRENT">EV +0.3</string>
<string name="cam_strings_exposure_level_p07_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/CURRENT">EV +0.7</string>
<string name="cam_strings_exposure_level_p10_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/CURRENT">EV +1.0</string>
<string name="cam_strings_exposure_level_p13_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/CURRENT">EV +1.3</string>
<string name="cam_strings_exposure_level_p17_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/CURRENT">EV +1.7</string>
<string name="cam_strings_exposure_level_p20_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/CURRENT">EV +2.0</string>
<string name="cam_strings_white_balance_txt" xliff:restype="x-CAMERA/MENU/DIALOG/2ROWS">White balance</string>
<string name="cam_strings_white_balance_auto_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/RIGHT">Auto</string>
<string name="cam_strings_white_balance_incandescent_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/RIGHT">Incandescent</string>
<string name="cam_strings_white_balance_fluorescent_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/RIGHT">Fluorescent</string>
<string name="cam_strings_white_balance_day_light_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/RIGHT">Daylight</string>
<string name="cam_strings_white_balance_cloudy_txt" xliff:restype="x-CAMERA/SETTING/EV/WB/RIGHT">Cloudy</string>
<string name="cam_strings_photometry_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/ITEM/SHORT/1ROW/NOICON">Metering</string>
<string name="cam_strings_photometry_center_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Center</string>
<string name="cam_strings_photometry_average_txt" xliff:restype="x-CAMERA/SETTING/LIST/2ROWS/H">Average</string>
<string name="cam_strings_photometry_spot_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Spot</string>
<string name="cam_strings_image_stabilizer_txt" xliff:restype="x-CAMERA/MENU/DIALOG/2ROWS">Image stabilizer</string>
<string name="cam_strings_geotagging_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/ITEM/MIDDLE/1ROW/NOICON">Save location</string>
<string name="cam_strings_save_destination_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/ITEM/SHORT/1ROW/NOICON">Data storage</string>
<string name="cam_strings_save_destination_ims_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Internal storage</string>
<string name="cam_strings_save_destination_sd_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">SD card</string>
<string name="cam_strings_fast_capturing_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/ITEM/SHORT/1ROW/NOICON">Quick launch</string>
<string name="cam_strings_video_size_full_hd_txt" xliff:restype="x-CAMERA/SETTING/LIST/2ROWS/H">Full HD</string>
<string name="cam_strings_error_device_not_available_txt" xliff:restype="x-UNLIMITED">The camera may be in use by another application. Please close the other application and try again.</string>
<string name="cam_strings_error_fatal_txt" xliff:restype="x-UNLIMITED">Unknown error.</string>
<string name="cam_strings_error_memory_full_txt" xliff:restype="x-UNLIMITED">Memory full. Delete some files from SD card.</string>
<string name="cam_strings_error_memory_unavailable_txt" xliff:restype="x-UNLIMITED">SD card unavailable</string>
<string name="cam_strings_error_message_during_voice_call_txt" xliff:restype="x-UNLIMITED">Camera unavailable during a call</string>
<string name="cam_strings_store_fail_txt" xliff:restype="x-CAMERA/TOAST/2ROWS/V">Could not save</string>
<string name="cam_strings_memory_full_save_failed_txt" xliff:restype="x-UNLIMITED">Could not save. Memory full.</string>
<string name="cam_strings_file_delete_confirm_txt" xliff:restype="x-UNLIMITED">Delete this file?</string>
<string name="cam_strings_file_share_title_txt" xliff:restype="x-GENERIC/DIALOG/TITLE">Share</string>
<string name="cam_strings_advanced_setting_geo_tag_both_off_txt" xliff:restype="x-UNLIMITED">To save locations, you have to enable GPS and/or wireless networks. Enable now?</string>
<string name="cam_strings_do_not_show_again_txt" xliff:restype="x-UNLIMITED">Do not show again</string>
<string name="cam_3d_strings_shooting_guide_left_to_right_txt" xliff:restype="x-CAMERA/3D/SHOOTING/GUIDE/H">Pan from left to right</string>
<string name="cam_3d_strings_shooting_guide_right_to_left_txt" xliff:restype="x-CAMERA/3D/SHOOTING/GUIDE/H">Pan from right to left</string>
<string name="cam_3d_strings_shooting_guide_down_to_up_txt" xliff:restype="x-CAMERA/3D/SHOOTING/GUIDE/H">Pan from down to up</string>
<string name="cam_3d_strings_shooting_guide_up_to_down_txt" xliff:restype="x-CAMERA/3D/SHOOTING/GUIDE/H">Pan from up to down</string>
<string name="cam_3d_strings_setting_shooting_direction_right_txt" xliff:restype="x-CAMERA/SETTING/LIST/2ROWS/H">Right</string>
<string name="cam_3d_strings_setting_shooting_direction_left_txt" xliff:restype="x-CAMERA/SETTING/LIST/2ROWS/H">Left</string>
<string name="cam_3d_strings_setting_shooting_direction_up_txt" xliff:restype="x-CAMERA/SETTING/LIST/2ROWS/H">Up</string>
<string name="cam_3d_strings_setting_shooting_direction_down_txt" xliff:restype="x-CAMERA/SETTING/LIST/2ROWS/H">Down</string>
<string name="cam_3d_strings_error_too_quick_txt" xliff:restype="x-UNLIMITED">Could not take picture. Please pan more slowly.</string>
<string name="cam_3d_strings_error_too_slow_txt" xliff:restype="x-UNLIMITED">Could not take picture. Please pan faster.</string>
<string name="cam_3d_strings_error_direction_txt" xliff:restype="x-UNLIMITED">Could not take picture. Please pan in the correct direction.</string>
<string name="cam_strings_file_delete_confirm_title_txt" xliff:restype="x-GENERIC/DIALOG/TITLE/ICON">Delete</string>
<string name="cam_strings_preview_edit_txt" xliff:restype="x-CAMERA/CORE/LIST/1ST/LIST/PARAMETER/2ROWS">Edit</string>
<string name="cam_strings_accessibility_viewer_txt" xliff:restype="x-UNLIMITED">Open with the image viewer</string>
<string name="cam_strings_dialog_cta_location_info_txt" xliff:restype="x-CAMERA/SETTING/LIST/1ROW/LARGE/V">Retrieve location info</string>
<string name="cam_strings_dialog_cta_access_txt" xliff:restype="x-GENERIC/DIALOG/TITLE">%1$s tries to</string>
<string name="cam_strings_cta_description_txt" xliff:restype="x-UNLIMITED">Allow below access request?</string>
<string name="cam_strings_remember_geotag_txt" xliff:restype="x-UNLIMITED">Tag your photos and videos with the locations where they are taken. You can change this setting later from Save location in the Camera settings.</string>
</resources>