<?xml version="1.0" encoding="utf-8"?>
<!--
 *********************************************************************
 * Copyright (C) 2014 Sony Mobile Communications Inc.                *
 * All rights, including trade secret rights, reserved.              *
 *********************************************************************
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/remember_geotag_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:text="@string/cam_strings_cta_description_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/customized_dialog_font_size"/>
    <TextView
        android:id="@+id/text_cta_dialog_subtitle"
        android:text="@string/cam_strings_dialog_cta_access_txt"
        android:layout_marginTop="@dimen/customized_dialog_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Body2"
        android:textColor="?android:attr/colorPrimary"/>
    <TextView
        android:id="@+id/text_cta_location_info"
        android:text="@string/cam_strings_dialog_cta_location_info_txt"
        android:layout_marginTop="@dimen/customized_dialog_space"
        android:layout_marginBottom="@dimen/customized_dialog_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/customized_dialog_font_size"/>
</LinearLayout>
